Fix overflow scroll

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -176,9 +176,7 @@ body {
   }
 }
 
-
 .Welcome {
-  height: 100%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
